--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Red Lenic - Electrodomésticos</title>
+    <title>Red Lenic - Electrodomésticos y Mucho mas</title>
     <!-- Tailwind CSS -->
     <script src="https://cdn.tailwindcss.com"></script>
     <!-- FontAwesome -->
@@ -217,6 +217,6 @@
     <!-- App Logic -->
     <script src="app.js"></script>
 </body>
-!
+
 
 </html>
